gcc/testsuite/algol68/compile/error-contraction-1.a68
# { dg-options "-fstropping=upper" }  #

# Contracting mixed collateral variable and constant declarations is
  not allowed.
#
(INT foo = 100, bar := 200) # { dg-error "mixed" } #
